# 1c-conf-doc

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  README.md  config.docker.example.yaml  config.example.yaml  docker-compose.yml  mcp.json.docker.example  mcp.json.example  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: conf-doc-search.mdc  development-workflow.mdc  ui-polish.mdc
.github/workflows/: release.yml
docs/: CONFIGURATION_SLOTS.md  DOCKER_UPDATE.md
scripts/: check_changelog.py  mcp.cmd  mcp.sh  mcp_demo.py  mcp_smoke_test.py  reindex_roles.py  release.py  test_search_roles.py
skills/: README.md
skills/conf-doc-search/: SKILL.md  examples.md
src/onec_conf_doc/: __init__.py  _version.py  cli.py  config.py  config_names.py  export_detect.py  export_migrate.py  export_root.py  export_slot.py  progress.py
src/onec_conf_doc/api/: __init__.py  app.py  embeddings_settings.py  jobs.py  logging_buffer.py  routes.py  upload.py
src/onec_conf_doc/markdown/: generator.py  templates.py
src/onec_conf_doc/mcp/: __init__.py  __main__.py  client.py  server.py
src/onec_conf_doc/metadata/: __init__.py  odata.py
src/onec_conf_doc/models/: __init__.py  metadata.py
src/onec_conf_doc/parser/: __init__.py  dcs_parser.py  rights_parser.py  scanner.py  type_registry.py  xml_parser.py
src/onec_conf_doc/rag/: chunker.py  embed_policy.py  embedding_cache.py  faiss_index.py  llm.py  pipeline.py  role_search.py  search_ranking.py
src/onec_conf_doc/rag/embeddings/: __init__.py  base.py  ollama_provider.py  openai_provider.py  sentence_transformers_provider.py
src/onec_conf_doc/storage/: paths.py  sqlite.py
src/onec_conf_doc/web/: __init__.py
src/onec_conf_doc/web/static/: app.js  index.html  styles.css
tests/: test_api.py  test_check_changelog.py  test_config_names.py  test_delete_bulk.py  test_delete_performance.py  test_embedding_cache.py  test_export_detect.py  test_export_slot.py  test_incremental_chunks.py  test_incremental_embed.py  test_jobs.py  test_logs.py  test_markdown.py  test_mcp.py  test_odata.py  test_parser.py  test_rag.py  test_role_search.py  test_search_ranking.py  test_settings.py  test_upload.py  test_web_static.py
tests/fixtures/export_minimal/: Configuration.xml
tests/fixtures/export_minimal/Catalogs/: Номенклатура.xml
tests/fixtures/export_minimal/Documents/: РеализацияТоваров.xml
tests/fixtures/export_minimal/Enums/: ВидыОпераций.xml
tests/fixtures/export_minimal/InformationRegisters/: КадроваяИсторияСотрудников.xml
tests/fixtures/export_minimal/Reports/: ТестовыйОтчет.xml
tests/fixtures/export_minimal/Roles/: ТестоваяРоль.xml
(+4 files in other folders)
