[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "1c-conf-doc"
version = "0.2.0"
description = "MCP-сервер для поиска по документации конфигурации 1С"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lxml>=5.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "faiss-cpu>=1.9",
    "numpy>=1.26",
    "html2text>=2024.2",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "tqdm>=4.66",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=3.0"]
openai = ["openai>=1.0"]
mcp = ["mcp>=1.6"]
dev = [
    "mypy>=1.13",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "ruff>=0.9",
    "types-PyYAML",
    "types-tqdm",
]
all = ["1c-conf-doc[embeddings,openai,mcp,dev]"]

[project.scripts]
conf-doc = "onec_conf_doc.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
onec_conf_doc = ["py.typed", "web/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]

[tool.ruff.lint.isort]
known-first-party = ["onec_conf_doc"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["onec_conf_doc"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "faiss.*",
    "lxml.*",
    "sentence_transformers.*",
    "openai.*",
    "html2text.*",
    "yaml.*",
    "tqdm.*",
    "mcp.*",
]
ignore_missing_imports = true
